<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/editHotspot"
        android:title="@string/edit_hotspot">
        <menu>
            <item
                android:id="@+id/imagesHotspot"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/images">
                <menu>
                    <item
                        android:id="@+id/deleteImageHotspot"
                        android:icon="@drawable/ic_menu_delete"
                        android:title="@string/delete_image"></item>
                    <item
                        android:id="@+id/savedImagesHotspot"
                        android:title="@string/saved_images"></item>
                    <item
                        android:id="@+id/cameraHotspot"
                        android:enabled="true"
                        android:title="@string/camera"></item>
                    <item
                        android:id="@+id/videoCameraHotspot"
                        android:enabled="true"
                        android:title="@string/video_camera"></item>
                    <item
                        android:id="@+id/webPageHotspot"
                        android:enabled="true"
                        android:title="@string/web_page"></item>
                    <item
                        android:id="@+id/fromInternetImageHotspot"
                        android:title="@string/from_web_image"></item>
                    <item
                        android:id="@+id/imagesFromLibraryHotspot"
                        android:enabled="true"
                        android:title="@string/from_library"></item>
                    <item
                        android:id="@+id/videosFromLibraryHotspot"
                        android:enabled="true"
                        android:title="@string/video_from_library"></item>
                    <item
                        android:id="@+id/pasteImageHotspot"
                        android:title="@string/paste_image"></item>
                    <item
                        android:id="@+id/rotateImageHotspot"
                        android:title="@string/rotate_image"></item>
                    <item
                        android:id="@+id/editImageHotspot"
                        android:title="@string/edit_image"></item>
                    <item
                        android:id="@+id/googleDriveImageHotspot"
                        android:title="@string/from_google_drive"></item>
                </menu>
            </item>
            <item
                android:id="@+id/soundHotspot"
                android:enabled="true"
                android:title="@string/sound">
                <menu>
                    <item
                        android:id="@+id/deleteSoundHotspot"
                        android:icon="@drawable/ic_menu_delete"
                        android:title="@string/delete_sound"></item>
                    <item
                        android:id="@+id/pasteSoundHotspot"
                        android:title="@string/paste_sound"></item>
                    <item
                        android:id="@+id/soundFromLibraryHotspot"
                        android:title="@string/sound_search"></item>
                    <item
                        android:id="@+id/recordSoundHotspot"
                        android:title="@string/record_sound"></item>
                    <item
                        android:id="@+id/textToSpeechHotspot"
                        android:enabled="true"
                        android:title="@string/text_to_speech"></item>
                    <item
                        android:id="@+id/googleDriveSoundHotspot"
                        android:title="@string/from_google_drive"></item>
                </menu>
            </item>
            <item
                android:id="@+id/boardHotspot"
                android:enabled="true"
                android:title="@string/board">
                <menu>
                    <item
                        android:id="@+id/deleteBoardHotspot"
                        android:icon="@drawable/ic_menu_delete"
                        android:title="@string/delete_board"></item>
                    <item
                        android:id="@+id/newBoardHotspot"
                        android:title="@string/new_board">
                    </item>
                    <item
                        android:id="@+id/insertExistingBoardHotspot"
                        android:title="@string/insert_existing_board"></item>
                    <item
                        android:id="@+id/boardsFromLibraryHotspot"
                        android:title="@string/board_from_library"></item>
                    <item
                        android:id="@+id/boardsFromGoogleDriveHotspot"
                        android:title="@string/from_google_drive"></item>
                </menu>
            </item>
            <item
                android:id="@+id/textPropertiesHotspot"
                android:enabled="true"
                android:title="@string/text_prop"></item>
            <item
                android:id="@+id/copyCellHotspot"
                android:title="@string/copy_cell"></item>
            <item
                android:id="@+id/pasteCellHotspot"
                android:icon="@drawable/ic_menu_paste_dark"
                android:title="@string/paste_cell"></item>
            <item
                android:id="@+id/clearCellHotspot"
                android:title="@string/clear_cell"></item>
        </menu>
    </item>
    <item
        android:id="@+id/Editcell"
        android:title="@string/edit_cell">
        <menu>
            <item
                android:id="@+id/images"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/images">
                <menu>
                    <item
                        android:id="@+id/deleteImage"
                        android:icon="@drawable/ic_menu_delete"
                        android:title="@string/delete_image"></item>
                    <item
                        android:id="@+id/savedImages"
                        android:title="@string/saved_images"></item>
                    <item
                        android:id="@+id/camera"
                        android:enabled="true"
                        android:title="@string/camera"></item>
                    <item
                        android:id="@+id/videoCamera"
                        android:enabled="true"
                        android:title="@string/video_camera"></item>
                    <item
                        android:id="@+id/webPage"
                        android:enabled="true"
                        android:title="@string/web_page"></item>
                    <item
                        android:id="@+id/fromInternetImage"
                        android:title="@string/from_web_image"></item>
                    <item
                        android:id="@+id/imagesFromLibrary"
                        android:enabled="true"
                        android:title="@string/from_library"></item>
                    <item
                        android:id="@+id/videosFromLibrary"
                        android:enabled="true"
                        android:title="@string/video_from_library"></item>
                    <item
                        android:id="@+id/pasteImage"
                        android:title="@string/paste_image"></item>
                    <item
                        android:id="@+id/rotateImage"
                        android:title="@string/rotate_image"></item>
                    <item
                        android:id="@+id/editImage"
                        android:title="@string/edit_image"></item>
                    <item
                        android:id="@+id/scribe"
                        android:title="@string/scribe"></item>
                </menu>
            </item>
            <item
                android:id="@+id/sound"
                android:enabled="true"
                android:title="@string/sound">
                <menu>
                    <item
                        android:id="@+id/deleteSound"
                        android:icon="@drawable/ic_menu_delete"
                        android:title="@string/delete_sound"></item>
                    <item
                        android:id="@+id/pasteSound"
                        android:title="@string/paste_sound"></item>
                    <item
                        android:id="@+id/soundFromLibrary"
                        android:title="@string/sound_search"></item>
                    <item
                        android:id="@+id/recordSound"
                        android:title="@string/record_sound"></item>
                    <item
                        android:id="@+id/textToSpeech"
                        android:enabled="true"
                        android:title="@string/text_to_speech"></item>
                </menu>
            </item>
            <item
                android:id="@+id/board"
                android:enabled="true"
                android:title="@string/board">
                <menu>
                    <item
                        android:id="@+id/deleteBoard"
                        android:icon="@drawable/ic_menu_delete"
                        android:title="@string/delete_board"></item>
                    <item
                        android:id="@+id/newBoard1"
                        android:title="@string/new_board">
                        <menu>
                            <item
                                android:id="@+id/newBoard"
                                android:title="@string/simple_board"></item>
                            <item
                                android:id="@+id/hotspotBoard"
                                android:title="@string/hotspot_board"></item>
                            <item
                                android:id="@+id/wordVariationBoard"
                                android:title="@string/word_variation_board"></item>
                            <item
                                android:id="@+id/codedWordVariationBoard"
                                android:title="@string/coded_word_variation_board"></item>
                        </menu>

                    </item>
                    <item
                        android:id="@+id/insertExistingBoard"
                        android:title="@string/insert_existing_board"></item>
                    <item
                        android:id="@+id/boardsFromLibrary"
                        android:title="@string/board_from_library"></item>
                    <item
                        android:id="@+id/boardSort"
                        android:title="@string/sort" />
                    <item
                        android:id="@+id/addRow"
                        android:title="@string/add_row"></item>
                    <item
                        android:id="@+id/addColumn"
                        android:title="@string/add_column"></item>
                    <item
                        android:id="@+id/deleteLastRow"
                        android:title="@string/delete_last_row"></item>
                    <item
                        android:id="@+id/deleteRightColumn"
                        android:title="@string/delete_right_column"></item>
                    <item
                        android:id="@+id/compressColumns"
                        android:title="@string/compress_columns"></item>
                    <item
                        android:id="@+id/stretchColumns"
                        android:title="@string/stretch_columns"></item>

                </menu>
            </item>
            <item
                android:id="@+id/textProperties"
                android:enabled="true"
                android:title="@string/text_prop"></item>
            <item
                android:id="@+id/schedule"
                android:enabled="true"
                android:title="@string/schedule">
                <menu>
                    <item
                        android:id="@+id/addSchedule"
                        android:icon="@drawable/ic_menu_delete"
                        android:title="@string/add_edit_schedule"></item>
                    <item
                        android:id="@+id/deleteSchedule"
                        android:title="@string/delete_schedule"></item>
                    <item
                        android:id="@+id/viewSchedules"
                        android:title="@string/view_schedules"></item>
                </menu>
            </item>
            <item
                android:id="@+id/location"
                android:enabled="true"
                android:title="@string/location">
                <menu>
                    <item
                        android:id="@+id/addLocation"
                        android:icon="@drawable/ic_menu_delete"
                        android:title="@string/add_edit_location"></item>
                    <item
                        android:id="@+id/deleteLocation"
                        android:title="@string/delete_location"></item>
                    <item
                        android:id="@+id/viewLocations"
                        android:title="@string/view_locations"></item>
                </menu>
            </item>
            <item
                android:id="@+id/copyCell"
                android:title="@string/copy_cell"></item>
            <item
                android:id="@+id/pasteCell"
                android:icon="@drawable/ic_menu_paste_dark"
                android:title="@string/paste_cell"></item>
            <item
                android:id="@+id/homeCell"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/home_cell"></item>
            <item
                android:id="@+id/backCell"
                android:title="@string/back_cell"></item>
            <item
                android:id="@+id/clearCell"
                android:title="@string/clear_cell"></item>
        </menu>
    </item>
</menu>
